--- a/static/style/font.css
+++ b/static/style/font.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Roboto:ital,wght@0,400;0,500;1,300&display=swap");
 
@@ -11,7 +11,7 @@ h1 {
 	font-size: 80px;
 	line-height: 80px;
 
-	color: var(--black);
+	color: var(--grey-33);
 }
 h1 > a {
 	text-decoration-line: underline;
@@ -32,7 +32,8 @@ h2 {
 
 	color: var(--black);
 }
-p {
+p,
+figcaption {
 	font-style: normal;
 	font-weight: 400;
 	font-size: 20px;
@@ -41,9 +42,17 @@ p {
 
 	color: var(--black);
 }
+figcaption {
+	font-style: italic;
+	font-weight: 300;
 
-.image {
+	color: var(--grey-47);
+}
+
+.image * {
 	font-family: "Roboto";
+
+	color: var(--grey-33);
 }
 .image h1 {
 	font-style: normal;
@@ -51,10 +60,10 @@ p {
 	font-size: 32px;
 	line-height: 40px;
 }
-.image > h1 > a {
+.image h1 > a {
 	text-decoration-line: underline;
 }
-.image > p {
+.image p {
 	font-style: normal;
 	font-weight: 400;
 	font-size: 16px;
@@ -62,11 +71,11 @@ p {
 
 	letter-spacing: 0.003em;
 }
-.image > p.desc {
+.image p.desc {
 	font-style: italic;
 	font-weight: 300;
 
-	letter-spacing: 0.003em;
+	color: var(--grey-47);
 }
 .mono a,
 .mono p {
@@ -92,10 +101,10 @@ p {
 		font-size: 24px;
 		line-height: 24px;
 	}
-	p {
-		font-size: 16px;
-		line-height: 24px;
-	}
+	/* p { */
+	/* 	font-size: 16px; */
+	/* 	line-height: 24px; */
+	/* } */
 
 	.image h1 {
 		font-size: 24px;
